--- a/.github/workflows/run_private_code.yml
+++ b/.github/workflows/run_private_code.yml
@@ -15,12 +15,7 @@ jobs:
       cancel-in-progress: false
 
     env:
-      # Secrets YouTube (đặt ở repo CÔNG KHAI)
-      YT_CLIENT_ID:     ${{ secrets.YT_CLIENT_ID }}
-      YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
-      YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
-      
-
+    
     steps:
       - name: Checkout wrapper (repo PUBLIC)
         uses: actions/checkout@v4
@@ -49,10 +44,7 @@ jobs:
           repo="${{ inputs.private_repo }}"; [ -z "$repo" ] && repo="audreykft2qlbp1duqldp-del/hoanthien"; echo "repo=$repo" >> "$GITHUB_OUTPUT"
           ref="${{ inputs.private_ref }}";   [ -z "$ref" ] && ref="main";                                           echo "ref=$ref"   >> "$GITHUB_OUTPUT"
           wd="${{ inputs.workdir }}";        [ -z "$wd" ]  && wd=".";                                               echo "workdir=$wd" >> "$GITHUB_OUTPUT"
-          privacy="${{ inputs.youtube_privacy }}"; [ -z "$privacy" ] && privacy="public";                           echo "privacy=$privacy" >> "$GITHUB_OUTPUT"
-
-      - name: Export resolved privacy to env
-        run: echo "YOUTUBE_PRIVACY=${{ steps.params.outputs.privacy }}" >> "$GITHUB_ENV"
+          
 
 
       # KÉO CODE từ repo PRIVATE (PAT)
@@ -113,21 +105,7 @@ jobs:
           echo "dir=$CAND" >> "$GITHUB_OUTPUT"
           echo "[FOUND] $CAND"
 
-      # Bắt buộc có secrets YT để up thẳng
-      - name: Require YT OAuth secrets
-        shell: bash
-        run: |
-          miss=0
-          for k in YT_CLIENT_ID YT_CLIENT_SECRET YT_REFRESH_TOKEN; do
-            if [ -z "${!k}" ]; then
-              echo "::error::Thiếu secret $k"
-              miss=1
-            fi
-          done
-          if [ "$miss" = "1" ]; then
-            exit 1
-          fi
-          echo "[OK] YT secrets đầy đủ."
+      
 
 
       - name: Setup Python 3.11
@@ -185,7 +163,7 @@ jobs:
           [ -z "$TOKEN" ] && { echo "::warning::Không có token có quyền ghi. Bỏ qua commit."; exit 0; }
 
           FILES=""
-          for f in links_done.csv promptdalay.csv tieudedalay.csv; do
+          for f in tieudedalay.csv; do
             [ -f "$f" ] && FILES="$FILES $f"
             [ -n "$DIR_FOUND" ] && [ -f "$DIR_FOUND/$f" ] && FILES="$FILES $DIR_FOUND/$f"
           done
@@ -200,7 +178,7 @@ jobs:
 
           git add -- $FILES
           git diff --cached --quiet && { echo "[INFO] Không có thay đổi."; exit 0; }
-          git commit -m "ci(state): update promptdalay.csv, links_done.csv, tieudedalay.csv"
+          git commit -m "ci(state): update tieudedalay.csv"
           git push origin HEAD:"${PRIVATE_REF}"
 
       # Commit & PUSH 3 CSV về repo PRIVATE qua SSH (nếu checkout bằng SSH)
@@ -224,7 +202,7 @@ jobs:
           printf "Host github.com\n  StrictHostKeyChecking accept-new\n" >> ~/.ssh/config
 
           FILES=""
-          for f in promptdalay.csv links_done.csv tieudedalay.csv; do
+          for f in tieudedalay.csv; do
             [ -f "$f" ] && FILES="$FILES $f"
             [ -n "$DIR_FOUND" ] && [ -f "$DIR_FOUND/$f" ] && FILES="$FILES $DIR_FOUND/$f"
           done
